feat: improve AI code reviewer — fix AI_PARSE bug, redesign UI, add HLD/LLD docs
- Fix critical AI_PARSE error: increase max-tokens 400→4096
- Improve OpenAI system prompt for reliable JSON output
- Replace System.out with SLF4J logging
- Add GlobalExceptionHandler (@ControllerAdvice)
- Fix history page crash: Instant date formatting + LazyInitializationException
- Redesign review page: score gauge, severity badges, copy-to-clipboard
- Redesign history page: colored status badges, improved empty state
- Complete CodeMirror language support (10 languages)
- Fix CodeMirror CDN to v5.65.16
- Add HLD.md and LLD.md design documentation